# yum_notes

./: Cargo.toml  README.md  style.scss
src/: cli_functions.rs  functions.rs  gtk_functions.rs  holding.rs  main.rs  ux_functions.rs
src/routes/: delete.rs  edit.rs  mod.rs  new.rs
src/ux/: mod.rs  structs.rs
