[package]
name = "yum_notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26.0", features = [ "serde" ] }
serde = {version = "1.0.158", features = ["derive"] }
serde_json = {version ="1.0.94" }
chrono = { version = "0.4.23", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0.39"
